# skolem-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
skolem/: Cargo.toml
skolem-debug/: Cargo.toml  index.scss
skolem-debug/src/: app.rs  main.rs
skolem/src/: main.rs  sat.rs  types.rs  utils.rs
skolem/src/sat/: cdcl.rs  dpll.rs
skolem/src/types/: heap.rs  priority_search_queue.rs
src/: lib.rs  main.rs  parser.rs  sat.rs  types.rs
src/sat/: cdcl.rs  dpll.rs
src/types/: priority_search_queue.rs
