[package]
name = "skolem-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
yew = { version = "0.21.0", features = ["csr"] }
skolem = { path = "../skolem" }
anyhow = "1.0.89"
gloo = "0.11.0"
web-sys = "0.3.72"
wasm-bindgen = "0.2.95"
